src/objects/Instruction__c.object
<CustomObject>
    <description>Pre and Post Op instructions</description>
    <fields>
        <fullName>Instruction_Description__c</fullName>
        <label>Instruction Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <label>Travel</label>
        <referenceTo>Travel__c</referenceTo>
        <relationshipLabel>Instructions</relationshipLabel>
        <relationshipName>Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Op</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Instruction</label>
    <nameField>
        <displayFormat>INS{000000000}</displayFormat>
        <label>Instruction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>